# awiki

./: .gitignore  .goreleaser.yaml  AGENTS.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  dist-workspace.toml  go.mod  install.sh  shell.nix
.githooks/: commit-msg  pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
cmd/awiki/: main.go  main_test.go  output.go
docs/: architecture.md  build.md  cli.md  install.md  link-resolution.md  overview.md  release.md  testing.md  wiki-model.md
internal/awiki/wiki/: analysis.go  cache.go  excerpt.go  frontmatter.go  graph.go  link_only.go  links.go  lint.go  rename.go  vault.go  vault_bench_test.go  vault_recursive_test.go  vault_test.go  wanted.go
scripts/: build.sh  check-ci-local.sh  check-file-lengths.py  file-length-budgets.json  go-env.sh  lint.sh  test.sh
src/: cli.rs  main.rs  output.rs  text.rs
src/cli/: suggest.rs
src/wiki/: analysis.rs  format.rs  frontmatter.rs  links.rs  load.rs  mod.rs  model.rs  path.rs  rename.rs  suggest.rs  tests.rs
src/wiki/suggest/: duplicates.rs  pages.rs
